our work pixel perfecct

--- a/dev/assets/ourwork.pug
+++ b/dev/assets/ourwork.pug
@@ -7,9 +7,9 @@ block content
 			//- background shader wrapper
 			.background-wrapper.work-bg
 			//- projects wrapper
-			.works-list.snj-col-10.offset-1.snj-col-md-8.offset-md-2
+			.works-list.snj-col-10.offset-1.snj-col-md-9.offset-md-2
 				.wrap-list
-					+project-intro("workbranding.html","01", "Branding & Design", "","See case Studie", "See case")
+					+project-intro("workbranding.html","01", "Branding & Design", "","See case studies", "See case")
 					+project-intro("workstrategy.html", "02","Campaign"," & Social Media Strategy","See case studies", "See case", {textDelay: 1, arrowDelay: 2} )
 					+project-intro("workmanagement.html","03","Content Creation"," & Management", "See case studies", "See case", {textDelay: 2, arrowDelay: 3})
 					+project-intro("workevent.html","04","Event Curation","", "See case studies","See Case",{textDelay: 3, arrowDelay: 4})
