--- a/dev/scss/global/_buttons.scss
+++ b/dev/scss/global/_buttons.scss
@@ -119,6 +119,7 @@ a{
 	color: $cream;
 	display: inline-flex;
 	flex-direction: row;
+	align-items: center;
 	@media(min-width: 768px){
 		font-size: 16px;
 	}
@@ -166,7 +167,7 @@ a{
 		font-size: 12px;
 		font-family: 'TitlingGothicFB light';
 		line-height: 11px;
-		height: 9px;
+		height: 10px;
 		@media(min-width: 768px){
 			font-size: 16px;
 			line-height: 18px;
