Pixel perfect: Contact UI principal lista, mobile y desktop.

--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -9,6 +9,7 @@ html(class='no-js')
 		//- metatags
 		meta(name='description', content='Page_description')
 		meta(name='subject', content='Page_subject')
+		meta(name="format-detection" content="telephone=no")
 
 		//- Share graphs for social media
 		meta(property="og:url" 			content="PLACE_YOUR_URL")
