--- a/dev/assets/contact.pug
+++ b/dev/assets/contact.pug
@@ -43,7 +43,7 @@ block content
 
 					.info-block.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="3" data-cascade-delay="3")
 						h3 Number
-						p +971 (0) 4 330 0311
+						a(href="tel:+971043300311") +971 (0) 4 330 0311
 					.info-block.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="4" data-cascade-delay="4")
 						p © Copyright 2019
 	a.navigation-btn.btn-pages(href="ourwork.html")
