--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -57,7 +57,7 @@ html(class='no-js')
 			//- img(src="img/testing/workSections_mob.jpg", alt="")
 			//- img(src="img/testing/project_mob.jpg", alt="")
 			//- img(src="img/testing/about_mob.jpg", alt="")
-			//- img(src="img/testing/thanks_mob.jpg", alt="")
+			img(src="img/testing/thanks_mob.jpg", alt="")
 			//- img(src="img/testing/contact_mob.jpg", alt="")
 			//- img(src="img/testing/message_mob.jpg", alt="")		
 			//- img(src="img/testing/menu_mob.jpg", alt="")
