--- a/dev/assets/project-commerce-amongst.pug
+++ b/dev/assets/project-commerce-amongst.pug
@@ -6,21 +6,22 @@ block content
 		.row
 			section.project-about
 				+hero-project("E-commerce","Amongst Few","01")
-				aside.especifications.snj-col-10.offset-1.snj-col-md-6.offset-md-3
-					.snj-row
-						div.especific-item.snj-col-md-2
-							+project-box("Client", "Amongst Few")
-						div.especific-item.offset-md-2.snj-col-md-4
-							+project-box("Project", "Launch & Management of Website",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
-						div.especific-item.snj-col-md-2.offset-md-2
-							+project-box("Year", "2017-Present ",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
+				.especifications-wrap.snj-col-10.offset-1.snj-col-md-6.offset-md-3
+					aside.especifications
+						.snj-row
+							div.especific-item.snj-col-md-2
+								+project-box("Client", "Amongst Few")
+							div.especific-item.offset-md-2.snj-col-md-4
+								+project-box("Project", "Launch & Management of Website",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
+							div.especific-item.snj-col-md-2.offset-md-2
+								+project-box("Year", "2017-Present ",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
-					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Launch & Management of Website"
+					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Launch & Management of Website
 					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p Direct to consumer brands like Amongst Few have no choice but to develop an e-commerce game at the highest level. It’s the most important way to connect with consumers around the region, and world.
 						p The challenge, and opportunity, is how to translate what is so carefully curated and crafted in their flagship store into a digital experience. The foundation is always the aesthetics of the site - clean and nuanced like the store itself. We then focus on the user experience. 
-					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
+					div.paragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p While the knowledge, style and warmth of the store staff isn’t easily translated online, we can still provide an efficient and flexible experience - shopping by brand, size, price range and even color.
 						p True digital transformation isn’t complete without the other elements of the shopping experience, such as the brand’s social media channels, as well as the visuals, tone and offers of its newsletter. It’s all one ecosystem that is carefully crafted in order to ensure the customer can easily access what they’re looking for, and always come away understanding what the brand is about and can continually offer.
 			.p-photo1
