--- a/dev/assets/project-event-amongst.pug
+++ b/dev/assets/project-event-amongst.pug
@@ -6,21 +6,22 @@ block content
 		.row
 			section.project-about
 				+hero-project("Event Curation","Amongst Few","02")
-				aside.especifications.snj-col-10.offset-1.snj-col-md-6.offset-md-3
-					.snj-row
-						div.especific-item.snj-col-md-2
-							+project-box("Client", "Amongst Few")
-						div.especific-item.offset-md-2.snj-col-md-4
-							+project-box("Project", "Events at Sole DXB & Amongst Few Cafe",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
-						div.especific-item.snj-col-md-2.offset-md-2
-							+project-box("Year", "2016-Present",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
+				.especifications-wrap.snj-col-10.offset-1.snj-col-md-6.offset-md-3
+					aside.especifications
+						.snj-row
+							div.especific-item.snj-col-md-2
+								+project-box("Client", "Amongst Few")
+							div.especific-item.offset-md-2.snj-col-md-4
+								+project-box("Project", "Events at Sole DXB & Amongst Few Cafe",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
+							div.especific-item.snj-col-md-2.offset-md-2
+								+project-box("Year", "2016-Present",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Events at Sole DXB & Amongst Few Cafe
 					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p Amongst Few hasn’t become the region’s premiere streetwear brand on their clothing alone. It’s also because they’ve made it a point to shape and move streetwear culture in Dubai through their activations and events. It’s become the foundation for how Jungle Beige approach all other events - move the needle, or don’t bother.
 						p At Sole DXB, we made countless visitors to the Amongst Few booth shed nostalgic tears of joy when we recreated the bedroom of a Sneaker/Hip Hop/Grime kid (including a fully functional Nintendo set up). A year later, Amongst Few’s collaboration with The Hundreds led to Sole DXB’s most celebrated art installation - in the most organic way possible.
-					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
+					div.paragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p After selling out of the The Hundreds collab on Friday, we decided to tag “Sold Out” over our own booth (furniture and all) instead of setting up on Saturday with other collections. The community fully embraced this brazen decision and proceeded to use it as their own personal backdrop for IG. All this before “Instagrammable” was thrown around in every marketing meeting.
 						p Amongst Few Cafe has also been home to numerous activations, transforming the frequented cafe to a new experience with each new theme. One night it will be the home of the annual sneaker and streetwear bible, All Gone. The next it will be a Jamaican backyard for the brand’s collaboration with Miss Lily’s. Same place, difference experience, moving the needle… every time.
 
