--- a/dev/assets/project-social-power.pug
+++ b/dev/assets/project-social-power.pug
@@ -8,14 +8,15 @@ block content
 			section.project-about
 				//- .background-wrapper.p-about-bg
 				+hero-project("Campaign & Social Media Strategy","Power Horse", "02")
-				aside.especifications.snj-col-10.offset-1.snj-col-md-6.offset-md-3
-					.snj-row
-						div.especific-item.snj-col-md-2
-							+project-box("Client", "Power Horse")
-						div.especific-item.offset-md-2.snj-col-md-4
-							+project-box("Project", "Community & Culture Initiative",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
-						div.especific-item.snj-col-md-2.offset-md-2
-							+project-box("Year", "2018-Present",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
+				.especifications-wrap.snj-col-10.offset-1.snj-col-md-6.offset-md-3
+					aside.especifications
+						.snj-row
+							div.especific-item.snj-col-md-2
+								+project-box("Client", "Power Horse")
+							div.especific-item.offset-md-2.snj-col-md-4
+								+project-box("Project", "Community & Culture Initiative",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
+							div.especific-item.snj-col-md-2.offset-md-2
+								+project-box("Year", "2018-Present",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Community & Culture Initiative
