--- a/dev/scss/views/_ourwork-sections.scss
+++ b/dev/scss/views/_ourwork-sections.scss
@@ -1,9 +1,6 @@
-.ourwork-sections-detail{
+#branding-work{
 	height: 100%;
-	width: 100%;
-	padding: 0;
 }
-// background
 .background-wrapper{
 	width: 100%;
 	height: 100%;
@@ -14,151 +11,163 @@
 	background-position: center top;
 	background-size: cover;
 }
-// background img full page
 .worksections-bg{
 	background-image: url("../img/bg-work-section.jpg");
 }
 
-//wrapper project section
 .sections-p-wrapper{
 	position: relative;
-	// height: 60.8vh;
 	background: $orange;
+	min-height: 277px;
+	height: 60.87%;
 	display: flex;
-	height: 50vh;
 	flex-direction: column;
 	justify-content: center;
 	color: $cream;
 	overflow: hidden;
 	padding: 0 10px;
+	@media(min-width: 768px){
+		height: 50vh;
+	}
 	@media(min-width: 992px){
-		width: calc(83.34% - 28px);
-		// width: 100%;
+		width: 81.14%;
 		float: right;
 		white-space: nowrap;
-		padding:0 40px 0 0;
 	}
 	@media(min-width: 1282px){
-		width: calc(83.34% - getvw(28vw));
-		padding: 0 getvw(40vw) 0 0;
+		padding: 0 getvw(10vw);
 	}
 	&.full-screen{
 		height: 100vh;
 	}
-	.center-wrapper{
-		width: 100%;
-		margin-top: 25px;
-		@media(min-width: 992px){
-			margin-top: 106px;
-			display: flex;
-			align-items: flex-end;
-			padding-left: 4px;
+	.project-wrapper-section{
+		width: 75%;
+		margin-bottom:10px;
+		margin-left: 16.666667%;
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		flex-wrap: nowrap;
+		@media(min-width: 768px){
+			margin-bottom:0;
+			margin-left: 0;
+			margin-top: 76px;
+			width: 100%;
+			display: block;
 		}
 		@media(min-width: 1282px){
-			margin-top: getvw(25vw);
-			padding-left: getvw(4vw);
+			margin-top: getvw(76vw);
 		}
 	}
-	// mixin wrapper project section
 	.about-work{
 		position: relative;
-		margin-left: 16.666667%;
-		width: calc(75% - 5px);
 		@media(min-width: 768px){
+			width: 38.8%;
+			margin-left: 18.8%;
 			display: inline-block;
-			margin-left: 20%;
-			width: 30%;
+			float: left;
 		}
-		h2{
-			font-family: 'TitlingGothicFB Standard';
-			font-size: 12px;
-			font-weight: 100;
-			padding-bottom: 7px;
-			letter-spacing: .04em;
-			width: auto;
-			position: relative;
-			z-index: 10;
-			@media(min-width: 758px){
-				padding-bottom: 9px;
-				font-family: 'TitlingGothicFB light';
+		.subtitle-wrapper{
+			position: absolute;		
+			width: 55.55%;
+			top: 0;
+			height: 56px;
+			display: block;
+			h2{
+				font-family: 'TitlingGothicFB Standard';
+				font-size: 12px;
+				font-weight: 100;
+				bottom: 6px;
+				position: absolute;
+				z-index: 10;
 			}
-			@media(min-width: 1282px){
-				font-size: getvw(12vw);
-				padding-bottom: getvw(9vw);
-			}
-		}
-		h1{
-			font-family: 'Nocturne Serif ExtraBold';
-			font-size: 22px;
-			padding-bottom: 20px;
-			letter-spacing: .1px;
-			position: relative;
-			z-index: 10;
-			width: 100%;
 			@media(min-width: 768px){
-				font-size: 30px;
-				padding-bottom: 0;
-				letter-spacing: 1px;
-				height: 25px;
-				line-height: 29px;
+				height: 70px;
+				width: 74%;
+				h2{
+					font-family: 'TitlingGothicFB light';
+					bottom: 0;
+				}
 			}
 			@media(min-width: 1282px){
-				font-size: getvw(30vw);
-				letter-spacing: getvw(1vw);
-				height: getvw(25vw);
-				line-height: getvw(29vw);
+				height: getvw(70vw);
+				h2{
+					font-family: getvw(12vw);
+				}
 			}
 		}
-		p{
+		.title-wrapper{
+			position: absolute;
+			width: 100%;
+			bottom: 0;
+			height: 41px;
+			h1{
+				font-family: 'Nocturne Serif ExtraBold';
+				font-size: 22px;
+				letter-spacing: .02em;
+				position: absolute;
+				z-index: 10;
+				width: 100%;
+				height: 100%;
+			}
+			@media(min-width: 768px){
+				height: 58px;
+				width: 100%;
+				h1{
+					font-size: 30px;
+				}
+			}
+			@media(min-width: 1282px){
+				height: getvw(58vw);
+				h1{
+					font-size: getvw(30vw)
+				}
+			}
+		}
+		span{
 			font-family: 'TitlingGothicFB light';
 			font-size: 120px;
 			color: $black;
-			text-align: left;
 			line-height: 120px;
 			height: 97px;
-			position: absolute;
-			left: 22.22%;
-			bottom: 4px;
+			position: relative;
+			display: block;
+			padding-left: 46px;
+			letter-spacing: .02em;
 			animation-duration: 1500ms;
 			animation-delay:50ms;
-
 			@media(min-width: 768px){
 				font-size: 165px;
 				line-height: 165px;
 				height: 134px;
-				left: 31.3%;
-				bottom: -59%;
-				letter-spacing: 0.025em;
+				padding-left: 24%
 			}
-			@media(min-width: 1282vw){
+			@media(min-width: 1282px){
 				font-size: getvw(165vw);
-				line-height: (165vw);
+				line-height: getvw(165vw);
 				height: getvw(134vw);
 			}
 		}
 	}
 	.arrow-container{
-		margin-left: 16.666667%;
-		display: block;
-		width: 66.666667%;
+		display: inherit;
 		position: relative;
-		padding-top: 15px;
+		margin-top: 21px;
 		animation-delay:175ms;
-		left: -20px;
+		.arrow-right{
+			pointer-events: none;
+			transform: translateX(-20px);
+		}
 		@media(min-width: 768px){
-			margin-left: 20%;
-			// width: 30%;
+			margin-left: 8.8%;
+			margin-top: 0;
 			width: auto;
-			display: inline-block;
-		}
-		@media(min-width: 998px){
-			// margin-left: 20%;
-			// padding-left: 6px;
-			padding: 0;
-		}
-		@media(min-width: 1282px){
-			left: getvw(-20vw);
-			padding-left: getvw(6vw);
+			display: inline-flex;
+			float:left;
+			top: 68%;
+			.arrow-right{
+				transform: translateX(0);
+			}
 		}
 		&:hover{
 			.arrow-right{
