--- a/dev/assets/_modules/slide-about.pug
+++ b/dev/assets/_modules/slide-about.pug
@@ -1,6 +1,6 @@
 //- component for slide about
 .about-component
-	section.header-about.snj-col-9.offset-1.offset-md-3.snj-col-lg-3.offset-lg-3.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="0" data-cascade-delay="0")
+	section.header-about.snj-col-9.offset-1.offset-md-3.snj-col-md-8.snj-col-lg-3.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="0" data-cascade-delay="0")
 		h1.title-block.display-text Founded by brand creators
 		h2.subtitle-block.display-text Our Moto
 
